@@ -1,0 +1,12 @@
+#pragma once
+
+#include <Arduino.h>
+
+class EventListener {
+
+	public:
+
+		virtual bool listen(uint8_t event);
+
+		virtual void handle();
+};
