@@ -2,6 +2,7 @@ cyberWatch 0.4
 ========================
 - FEATURE: set mainscreen to datetime app after power on / wakeup (touch)
 - FEATURE: wakeup to locked screen, unlock by PEKshort
+- FEATURE: system event subsystem
 
 cyberWatch 0.3
 ========================
